src/pages/CompleteSignUp/CompleteSignUp.module.scss
.container {
  background: #F1F1F1;
  height: 100vh;
  padding: 50px;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
}

.contentDiv {
  background: #F1F1F1;
  height: 100vh;
  padding: 50px;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  gap: 5%;
}

.bodyDiv {
  display: flex;
  flex-direction: row;
  gap: 5%;
}

.header {
  display: flex;
  flex-direction: row;
  justify-content: end;
  padding: 0 50px;
}


.bodyContainer {
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.inputDiv {
  display: flex;
  flex-direction: column;
  gap: 5px;
}

.inputDivRow {
  @extend .inputDiv;
  flex-direction: row;
  gap: 20px;
}

.centerItem {
  display: flex;
}

.formContainer {
  display: flex;
  flex-direction: column;
  gap: 30px;
}

.form {
  display: flex;
  flex-direction: column;
  gap: 30px;
}

.primaryBackground{
  background: #3e49fb;
  height: 100vh;
  width: 100vw;
}

.headerLogin {
  color: white;
  text-align: center;
  font-size: 44px;
  margin-bottom: 50px;
}
.recoverPasswordDiv{
  cursor: pointer;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}
.signUpRow {
  display: flex;
  flex-direction: row;
  gap: 5px;
}
.centerItemSmall {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  gap: 20px;
}

.divider {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 20px;
}

.line {
  width: 100%;
  height: 2px;
  background: #594B68;
}

